# raysharp-dvr-api-docs-and-sdk

./: RS_HTTP_API (custom)_170504.docx  dvr-http-api-2019-05-29.doc
RsSDK_V1.1.17/: readme.docx
RsSDK_V1.1.17/SDKWrapper/: RSSDKWrapper.sln
RsSDK_V1.1.17/SDKWrapper/Android/: JniHandler.java  SDKWrapper.h
RsSDK_V1.1.17/SDKWrapper/DeviceManager/: RSDevice.cpp  RSDevice.h  RSDevice.mm  authority_ability.h  convert_file_type.h  download_record.h  human_face.h  local_playback.h  local_playback_thumbnails.h  preview.h  search_record.h  sync_playback.h  talk.h  upgrade.h
RsSDK_V1.1.17/SDKWrapper/Include/: RSPlay.h  RSSDKWrapper.h  RSSDKWrapper.mm
RsSDK_V1.1.17/SDKWrapper/JsonCpp/: json.h  jsoncpp.mm
RsSDK_V1.1.17/SDKWrapper/Paramers/: ALTEReport.h  ALTEReport.mm  AlarmIO.h  AlarmMotion.cpp  AlarmNewIO.mm  AlarmPIR.h  AlarmPlan.mm  Alarmblock.mm  AnalogCh.cpp  AutoUpgrade.h  AutoUpgrade.mm  CaptureJh.mm  CaptureSet.cpp  ChnInfo.h  ChnInfo.mm  Devlog.h  DropboxParam.cpp  EPlatform.cpp  EmailPlan.h  EmailPlan.mm  EncodeStream.mm  FishEye.mm  FtpPlan.h  FtpPlan.mm  GB28181.h  HttpSet.h  HumanDetection.h  IOAlarmManage.cpp  IPCSet.cpp  IPCSet.h  IPFilter.cpp  IPFilter.h  IPFilterList.h  ImgCtrl.h  IntelligentNewUser.mm  JsonPage.h  LensShade.mm  LiveParam.mm  NetBase.h  NetEmail.h  (+48 more)
RsSDK_V1.1.17/SDKWrapper/Remote/: ParamRemoteTest.mm  ParamRemoteUpgrade.cpp
RsSDK_V1.1.17/android/GlSurfaceViewDemo/: local.properties  settings.gradle
RsSDK_V1.1.17/android/GlSurfaceViewDemo/app/: build.gradle
RsSDK_V1.1.17/android/GlSurfaceViewDemo/app/src/main/: AndroidManifest.xml
RsSDK_V1.1.17/android/GlSurfaceViewDemo/app/src/main/cpp/Android/: CMakeLists.txt  SDKWrapper.cpp  SDKWrapper.h
RsSDK_V1.1.17/android/GlSurfaceViewDemo/distribution/RSNet/Include/: RSNet.h  RSNetParameter.h  RSNetProtocol.h  RSTypedef.h
RsSDK_V1.1.17/android/GlSurfaceViewDemo/distribution/RSPlay/Include/: RSPlay.h  common_type.h
RsSDK_V1.1.17/android/GlSurfaceViewDemo/gradle/wrapper/: gradle-wrapper.properties
RsSDK_V1.1.17/ios/iosPlayWnd/iosPlayWnd/: AppDelegate.h  AppDelegate.m  Info.plist  PlayViewController.h  PlayViewController.mm  PlayViewController.xib  PlayWindow.h  PlayWindow.m  PlayWindow.xib  ViewController.h  ViewController.m  main.m
RsSDK_V1.1.17/ios/iosPlayWnd/iosPlayWnd.xcodeproj/: ._project.xcworkspace  project.pbxproj
RsSDK_V1.1.17/ios/iosPlayWnd/iosPlayWnd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RsSDK_V1.1.17/ios/iosPlayWnd/iosPlayWnd/Base.lproj/: ._LaunchScreen.storyboard  ._Main.storyboard
RsSDK_V1.1.17/mac/PlayWindow/: AppDelegate.h  AppDelegate.m  BackView.h  BackView.m  Info.plist  PlayWindow.h  PlayWindow.m  ViewController.h  ViewController.mm  main.m
RsSDK_V1.1.17/mac/PlayWindow.xcodeproj/: project.pbxproj
RsSDK_V1.1.17/mac/PlayWindow.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RsSDK_V1.1.17/mac/PlayWindow.xcodeproj/project.xcworkspace/xcuserdata/dajun.xcuserdatad/: UserInterfaceState.xcuserstate
RsSDK_V1.1.17/mac/PlayWindow.xcodeproj/project.xcworkspace/xcuserdata/debug.xcuserdatad/: UserInterfaceState.xcuserstate
RsSDK_V1.1.17/mac/PlayWindow.xcodeproj/project.xcworkspace/xcuserdata/raysharp.xcuserdatad/: UserInterfaceState.xcuserstate
RsSDK_V1.1.17/mac/PlayWindow.xcodeproj/xcuserdata/dajun.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
RsSDK_V1.1.17/mac/PlayWindow/Base.lproj/: Main.storyboard
RsSDK_V1.1.17/windows/: RSLibDemo_VS2017.sln  SDK_Demo_CSHARP.sln
RsSDK_V1.1.17/windows/Bin64/: RSNet.lib  RSPlay.lib  RSSDKWrapper.lib
RsSDK_V1.1.17/windows/RSLibDemo/: CWebBrowser.cpp  CWebBrowser.h  ConfigDlg.cpp  ConfigDlg.h  DbgHelp.h  LogInfoDlg.cpp  LogInfoDlg.h  Markup.cpp  MiniDumper.cpp  MiniDumper.h  PlayWindow.cpp  PlayWindow.h  PlaybackDlg.cpp  PlaybackDlg.h  PlayerDlg.cpp  PlayerDlg.h  PreviewDlg.cpp  PreviewDlg.h  RSLibDemo.cpp  RSLibDemo.h  RSLibDemo.rc  RSLibDemo.vcproj  RSLibDemoDlg.cpp  RSLibDemoDlg.h  RSLibDemoSDKWrapperDll.vcproj  RSLibDemo_VS2017.vcxproj  RSLibDemo_VS2017.vcxproj.filters  RSSliderCtrl.cpp  RSSliderCtrl.h  ReadMe.txt  Resource.h  SearchDlg.cpp  SearchDlg.h  StaticWnd.cpp  StaticWnd.h  WebbrowserDlg.cpp  WebbrowserDlg.h  stdafx.cpp  stdafx.h
RsSDK_V1.1.17/windows/RSLibDemo/res/: RSLibDemo.rc2
RsSDK_V1.1.17/windows/SDK_Demo_CSHARP/: Form1.Designer.cs  Form1.cs  Program.cs  SDKWrapper.cs  SDKWrapperJsonValue.cs  SDK_Demo_CSHARP.csproj
RsSDK_V1.1.17/windows/SDK_Demo_CSHARP/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
(+153 files in other folders)
